# esp_smart_cam

./: CMakeLists.txt  sdkconfig  sdkconfig.old
.cache/clangd/index/: bf20a6.c.8877876DD1272CC9.idx  bf20a6.h.4173C28E76A2EA90.idx  bf20a6_regs.h.0A0BFE430ECC3827.idx  bf20a6_settings.h.ACB8AC261D811275.idx  bf3005.c.862191394B69F41B.idx  bf3005.h.1796E080FAFB7020.idx  bf3005_regs.h.EA573DD2FFB3A2D3.idx  cam_hal.c.CC4B59E295CBDF3F.idx  cam_hal.h.2B49A4F2AE435521.idx  camera.h.84A5267F6EB4F40E.idx  camera.h.E4DB59936D6042D3.idx  esp_camera.c.6660B651434368C9.idx  esp_camera.h.B2E0C12B8439503E.idx  gc0308.c.FF46923860046D2C.idx  gc0308.h.CB5B27A4CDE0EFF0.idx  gc0308_regs.h.D0A16C11226A6C6B.idx  gc0308_settings.h.B4FF89606CE414AC.idx  gc032a.c.9D3EE13D9752209E.idx  gc032a.h.FCB482681C99B81C.idx  gc032a_regs.h.A2032E82D90F50FE.idx  gc032a_settings.h.CFE301621DEF7ED7.idx  gc2145.c.2CC5A6C2512B8419.idx  gc2145.h.BFF644046A89EC59.idx  gc2145_regs.h.FDC384D69596BDAA.idx  gc2145_settings.h.219530D1F1E91E89.idx  gpio.c.B73F75D840AB0DE2.idx  gpio.h.AE106C8BFD30F265.idx  hello_world_main.c.C33A2A0753FD2BCE.idx  hm0360.c.311591F93D1019A2.idx  hm0360.h.E4229AA3420826CA.idx  hm0360_regs.h.4AF7B4ABE2B741C0.idx  hm0360_settings.h.EA442C5177B5830D.idx  hm1055.c.10073844E507551A.idx  hm1055.h.2F69D652D193B9B6.idx  hm1055_regs.h.3B3A3CEFC3483DB0.idx  hm1055_settings.h.D0C8CB2A0C0AF910.idx  http.c.6A069A7A00623E12.idx  (+63 more)
main/: CMakeLists.txt  main.c
main/include/: camera.h  gpio.h  http.h  motion.h  sleep.h  wifi.h
main/src/: gpio.c  http.c  motion.c  sleep.c  wifi.c
